# sa-openapi

./: .gitignore  .pre-commit-config.yaml  .sa-openapi.toml.example  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  coderabbit.yaml  pyproject.toml
.claude/: settings.local.json
.claude/skills/sa-openapi-dev/: SKILL.md
.github/workflows/: ci.yml  coverage.yml  publish.yml
docs/: API_MAPPING.md  API_REFERENCE.md  CLI.md  CLI_TEST_ISSUES.md  DESIGN.md  PLAN.md
docs/openapi/: 1.3.6-horizon-Catalog-v1-swagger.json  1.3.6-horizon-DataSubscription-v1-swagger.json  1.3.6-horizon-Schema-v1-swagger.json  1.3.6-horizon-Segment-v1-swagger.json  1.3.6-horizon-Table-v1-swagger.json  1.3.6-horizon-Tag-v1-swagger.json  1.5.4-portal-Identity-v2-swagger.json  1.5.4-portal-Management-v2-swagger.json  1.5.4-portal-ResourceManagement-v2-swagger.json  3.0.4-analytics-Channel-v1-swagger.json  3.0.4-analytics-Dashboard-v1-swagger.json  3.0.4-analytics-Dataset-v1-swagger.json  3.0.4-analytics-EventMeta-v1-swagger.json  3.0.4-analytics-Model-v1-swagger.json  3.0.4-analytics-Model-v2-swagger.json  3.0.4-analytics-PropertyMeta-v1-swagger.json  3.0.4-analytics-SmartAlarm-v1-swagger.json
src/sa_openapi/: __init__.py  _auth.py  _config.py  _exceptions.py  _log.py  _response.py  _transport.py  async_client.py  client.py
src/sa_openapi/cli/: __init__.py  channel.py  config.py  dashboard.py  dataset.py  event_meta.py  main.py  model.py  output.py  property_meta.py  smart_alarm.py  sql.py
src/sa_openapi/models/: __init__.py  channel.py  common.py  dashboard.py  dataset.py  event_meta.py  model.py  property_meta.py  smart_alarm.py
src/sa_openapi/services/: __init__.py  channel.py  dashboard.py  dataset.py  event_meta.py  model.py  property_meta.py  smart_alarm.py
tests/: __init__.py  test_auth.py  test_clients.py  test_config.py  test_exceptions.py  test_logging.py  test_model_service.py  test_models.py  test_services.py  test_transport.py  test_version.py
